styles/globals.css
/* ... */
.registration .registration-schedule-visit {
  position: absolute;
  left: 34%;
  transform: translate(50%, 0);
  top: -7%;
}

.registration .agende-sua-visita .description {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.registration .agende-sua-visita .content {
  background: #25678a;
  position: relative;
  color: white;
  padding: 40px;
  height: 300px;
  font-weight: 500;
}

.registration .agende-sua-visita .form {
  padding: 30px;
  background: #25678a;
  height: 400px;
}

.registration .agende-sua-visita .input {
  padding: 1rem 0.6rem;
  background-color: white;
  border-radius: 0;
}

.registration .agende-sua-visita .submit-button {
  background: #f7be0f;
  color: white;
  font-size: 22px;
  text-align: center;
  padding: 8px;
  width: 85%;
  margin: 0 auto;
}

.registration .agende-sua-visita .registration-inform {
  background: #f7be0f;
  font-size: 22px;
  text-align: center;
  padding: 8px;
  width: 85%;
  margin: 0 auto;
  width: 100%;
  border-radius: 0.5rem;
  text-transform: uppercase;
  font-weight: bold;
  color: #25678a;
  height: 4rem;
  display: flex;
  align-items: center;
  justify-content: center;
}

@media (max-width: 1009px) {
  .registration .registration-schedule-visit {
    position: absolute;
    left: 0;
    transform: translate(50%, 0);
    top: 93%;
  }
}

@media (max-width: 1197px) {
  .registration .welcome .title {
    height: 82px;
  }
}

/*////////////*/

.projects .projects {
  padding: 1.5rem;
}

.projects-page .projects .project-title {
  font-size: 32px;
  color: darkblue;
  font-weight: bold;
  margin-left: 30px;
  margin-bottom: 20px;
}

.projects .projects .project {
  display: grid;
  grid: auto/1fr 1.5fr;
  gap: 25px;
}

.projects .projects .project.two-columns {
  grid: auto/100%;
}

.projects-page .project .content-1 {
  display: flex;
  flex-direction: column;
}

.projects-page .project .content-1.solo {
  max-width: 470px;
  width: 43%;
}

.projects-page .project .content-2 {
  display: grid;
  grid: auto/1fr 1fr;
  gap: 30px;
}

.projects-page .project .image-1 {
  margin-bottom: 30px;
  border: 2px solid;
}

.projects-page .project .content-title {
  font-size: 20px;
  color: green;
  font-weight: 500;
  text-transform: uppercase;
}

.projects-page .project .text {
  display: flex;
}

.projects-page .project .text-2,
.projects-page .project .text-3 {
  color: green;
}

.projects-page .title-container {
  display: flex;
  gap: 80px;
  align-items: center;
  margin-bottom: 40px;
  margin-left: 30px;
}

.projects-page .title-container .title {
  font-size: 40px;
  font-weight: bold;
  text-transform: uppercase;
}

.projects-page .title-container .subtitle {
  font-weight: 500;
  font-size: 24px;
}

.our-history .our-history {
  display: flex;
  flex-direction: column;
}

.our-history .our-history .content {
  display: grid;
  grid: auto/1fr 1fr;
  gap: 30px;
}

.our-history .our-history .title {
  font-size: 40px;
  font-weight: bold;
  text-transform: uppercase;
  text-align: left;
}

.our-history .our-history .text {
  font-size: 22px;
  font-weight: 500;
}

.our-history .our-history .image {
  height: 500px;
  background: gray;
}

.our-history .documentary .title {
  font-size: 42px;
  font-weight: bold;
}

.tv-cr-container {
  max-width: 1050px;
  margin: auto;
}

.tv-cr .movie {
  margin-bottom: 100px;
}

.tv-cr .video {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.tv-cr .title {
  margin-bottom: 2rem;
}

.tv-cr .videoTitle {
  font-weight: bold;
  color: #5a5a5a;
}

.tv-cr .description {
  font-size: 15px;
  color: #5a5a5a;
}

.tv-cr .movie .category {
  display: flex;
  flex-direction: column;
  gap: 50px;
}

.tv-cr .movie {
  display: grid;
  grid: auto/repeat(auto-fit, minmax(min-content, 500px));
  gap: 20px;
  justify-content: space-between;
}

.tv-cr .videos {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  justify-content: center;
}

.tv-cr .projectTitle {
  text-transform: uppercase;
  font-family: cursive;
  margin-bottom: 1rem;
  font-size: 19px;
  color: #5a5a5a;
}

.schedule-visit .form {
  display: flex;
  flex-direction: column;
  max-width: 1200px;
  margin: auto;
  margin-bottom: calc(3.5vw + 1rem);
}

.schedule-visit .label {
  margin-left: 30px;
  font-weight: 500;
}

.schedule-visit .form-control {
  display: flex;
  flex-direction: column;
}

.schedule-visit .input {
  background: #fde089;
  border-radius: 9px;
  height: 55px;
  padding: 20px;
}

.schedule-visit-button {
  background: #ffc253;
  width: fit-content;
  padding: 16px 34px;
  font-weight: 500;
  border-radius: 12px;
  align-self: flex-end;
}

.schedule-visit .captcha {
  width: 300px;
  background: #d9d9d9;
}

.schedule-visit .form-actions {
  margin-top: 60px;
  display: flex;
  justify-content: space-between;
}

.schedule-visit .education-level {
  max-width: 1200px;
  margin: auto;
}

.schedule-visit .education-level-item {
  display: grid;
  justify-content: center;
}

.schedule-visit .education-level .title {
  font-size: 60px;
  font-weight: bold;
  margin-bottom: 40px;
}

.schedule-visit .education-level-item .title {
  font-size: 35px;
  text-transform: none;
  color: #fdc723;
  font-weight: bold;
  margin-bottom: 15px;
}

.contact .input-textarea {
  height: 260px;
}

.contact .hero {
  height: auto;
}

.work-with-us .hero {
  height: auto;
}

.work-with-us .form .description {
  margin-bottom: 40px;
  margin-left: 30px;
}

.work-with-us .form .title {
  text-transform: uppercase;
  font-weight: 500;
}

.work-with-us .form .text {
  font-weight: 500;
}

.work-with-us .attach-resume-button {
  background: #ffc253;
  width: fit-content;
  padding: 16px 34px;
  font-weight: 500;
  border-radius: 12px;
  align-self: flex-end;
  cursor: pointer;
}

.work-with-us .fileInput {
  display: none;
}

.work-with-us .container {
  max-width: 1200px;
  margin: auto;
  display: flex;
  flex-direction: column;
}

.work-with-us .form {
  margin-bottom: 50px;
  max-width: 700px;
}
/* ... */

